# SDLEngine

./: .gitignore  CMakeLists.txt  build.ps1  build.sh
.github/workflows/: build.yaml
Engine/: build.sh
include/: Engine.h
src/: Engine.cpp  main.cpp
